# proactivebench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/proactivebench/: data_utils.py  environment.py  open_ended_gen.py
src/proactivebench/tests/: mcqa.py  oeg.py
